@@ -4,6 +4,7 @@
 - check for non existent negative entries in lookup_ghost().
 - fix reset flex scan buffer on init.
 - wait for master map available at start.
+- add master read wait option.
 
 28/03/2014 autofs-5.0.9
 =======================
